--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-	<link rel="icon" type="text/css" href="./IMG/logo1.jpg">
+	<link rel="icon" type="text/css" href="IMG/LOGO.jpg">
 
 
 	<script type="text/javascript" src="Js/jquery.min.js"></script>
