--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
 								<li><a href="home.html">HomePage</a></li>
 								<li><a href="AboutUs.html">About Us</a></li>
 								<li><a href="">Special Offer</a></li>
-								<li><a href="">New Arrival</a></li>
+								<li><a href="newarrival.html">New Arrival</a></li>
 								<li><a href="product.html">Products</a></li>
 								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
