--- a/Contact.html
+++ b/Contact.html
@@ -56,7 +56,7 @@
 						<div class="row">
 							<div class="panel panel-success ">
 								<div class="panel-heading ">
-									<h3 class="panel-title ">Liên hệ trực tuyến</h3>
+									<h3 class="panel-title ">Online contact</h3>
 								</div>
 								<div class="panel-body">
 									<table class="table">
@@ -65,8 +65,8 @@
 											<tr>
 												<td><img src="http://demo80008.webthienthan.net/image/cache/catalog/logo/logo-268x50.png" alt=""></td>
 												<td>
-													Showroom: 35A Huỳnh Văn Bánh - Phường 17 - Quận Phú Nhuận - TP.HCM</td>
-													<td>Điện thoại: 028.66.535.888/0914.666.284 - Mrs.Trang </td>
+													Showroom: 35A Huynh Van Banh - Ward 17 - Phu Nhuan District - HCMC  </td>
+													<td>Phone: 028.66.535.888/0914.666.284 - Mrs. Trang </td>
 														<td>Email: phongthuyvadoisong@gmail.com</td>
 											
 
@@ -82,12 +82,12 @@
 					<div class="col-lg-12">
 						<div class="container">
 							<form action="/action_page.php">
-								<label for="fname">Họ và tên</label>
+								<label for="fname">First and last name</label>
 								<input type="text" id="fname" name="firstname" placeholder="Your name..">
-								<label for="subject">Nội dung</label>
+								<label for="subject">Content</label>
 								<textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-								<input type="submit" value="Gửi">
+								<input type="submit" value="Send">
 							</form>
 						</div>
 					</div>
