--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
 								<li><a href="">HomePage</a></li>
 								<li><a href="AboutUs.html">About Us</a></li>
 								<li><a href="">Special Offer</a></li>
-								<li><a href="">New Arrival</a></li>
+								<li><a href="newarrival.html">New Arrival</a></li>
 								<li><a href="product.html">Products</a></li>
 								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
