--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Crystal Shop</title>
 	<link rel="stylesheet" type="text/css" href="product.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,9 +39,9 @@
 					<div class="menu">
 						<div class="cap1">
 							<ul>
-								<li><a href="">HomePage</a></li>
+								<li><a href="home.html">HomePage</a></li>
 								<li><a href="AboutUs.html">About Us</a></li>
-								<li><a href="">Special Offer</a></li>
+								<li><a href="special.html">Special Offer</a></li>
 								<li><a href="newarrival.html">New Arrival</a></li>
 								<li><a href="product.html">Products</a></li>
 								<li><a href="Contact.html">Contact Us</a></li>
@@ -50,14 +50,14 @@
 					</div>
 				</div>
 			</div>
-			<div class="main">
+			<div class="main"style="margin-top: 100px">
 				<div class="wrapper">
 
 					<div class="row">
 						<div class="div-content">
 							<div class="col-md-12 col-sm-12">
 								<div class="row">
-									<div class="col-md-4 col-sm-4 col-xs-12">
+									<div class="col-md-4 col-sm-4 col-xs-12" >
 										<div class="panel panel-success">
 											<div class="panel-heading">List of crystals</div>
 											<div class="panel-body">
