--- a/special.html
+++ b/special.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Crystal Shop</title>
-	<link rel="stylesheet" type="text/css" href="home.css">
+	<link rel="stylesheet" type="text/css" href="Special.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
@@ -18,16 +18,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body> 
+<body>
 	<div class="container-fluid">
 		<div class="row">
-			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
 			<div class="header">
 				<div class="footer-header">
 					<div class="logo">
-						<a href=""><img src="IMG/LOGO.jpg"></a>
-					</div> 
+						<a href=""><img src="IMG/LOGO.jpg" alt=""></a>
+					</div>
 					<div class="menu">
 						<div class="cap1">
 							<ul>
@@ -43,31 +41,42 @@
 				</div>
 			</div>
 			<div class="main">
-				<div class="col-lg-12">
-					<div class="row">
-						<div class="container anh">
-							<img src="IMG/bfb19b36-babb-4cc5-9d53-cfddf90edc4a.png"style="width: 100%;">
-							<h1 style="font-size: 55px; font-family:'Courier New', Courier, monospace">Crystal Shop</h1>
-							<br>
-							<style>
-								.blink {
-									animation: blinker 1s linear infinite;
-									color: chartreuse;
-									font-family: sans-serif;
-								}
-								@keyframes blinker {
-									50% {
-										opacity: 0;
-									}
-								}
-							</style>
-							<marquee class="blink" style="font-size: 30px;" >QUALITY BUITS PRESTIGE</marquee>
+				<div class="wrapper">
+					<div class="col-lg-12" style="margin-top: 120px">
+						<img src="https://img.freepik.com/free-vector/special-offer-modern-sale-banner-template_1017-20667.jpg" style="margin-left: 21%;">
+					</div>
+					<div class="col-lg-12" style="margin-top: 50px">
+						<div class="row">
+							<div class="panel panel-success ">
+								<div class="panel-heading ">
+									<h3 class="panel-title ">Special Offer Today</h3>
+								</div>
+								<div class="panel-body">
+									<div class="coupon">
+										<div class="">
+										  <h3>High Quality Natural Lapis Lazuli Bracelet</h3>
+										</div>
+										<img src="https://phongthuyvadoisong.com/pic/products/vong-lapi_637145109027176712.jpg.ashx" alt="Avatar" style="width:100%;">
+										<div class="" style="background-color:white">
+										  <h2><b>20% OFF YOUR PURCHASE</b></h2>
+										  <p> 1.100.000 VND</p>
+										</div>
+										<div class="">
+										  <p>Use Promo Code: <span class="promo">BOH232</span></p>
+										  <p class="expire">Expires: August 03, 2023</p>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
-						<br>
-						<br>
+					</div>
+					<div class="col-lg-12">
+						<div class="container">
+							
+						</div>
 					</div>
 				</div>
-				<hr>
+				
 			</div>
 		</div>
 	</div>
