--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,7 +5,6 @@
 	<title>Crystal Shop</title>
 	<link rel="stylesheet" type="text/css" href="AboutUs.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" type="text/css" href="./IMG/logo1.jpg">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
@@ -34,7 +33,7 @@
 							<ul>
 								<li><a href="home.html">HomePage</a></li>
 								<li><a href="AboutUs.html">About Us</a></li>
-								<li><a href="">Special Offer</a></li>
+								<li><a href="special.html">Special Offer</a></li>
 								<li><a href="newarrival.html">New Arrival</a></li>
 								<li><a href="product.html">Products</a></li>
 								<li><a href="Contact.html">Contact Us</a></li>
@@ -44,7 +43,7 @@
 				</div>
 			</div>
 			<div class="main">
-				<div class="col-lg-12">
+				<div class="col-lg-12" style="margin-top:1px">
 					<div class="row">
 						<div class="container anh">
 							<img src="IMG/beautiful-colorful-crystal-banner-ruby-260nw-1609696621.jpg" alt="Nature" style="width:100%;">
