--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,6 @@
 	<title>Crystal Shop</title>
 	<link rel="stylesheet" type="text/css" href="Contact.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="icon" type="text/css" href="./IMG/logo1.jpg">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
@@ -32,7 +31,7 @@
 							<ul>
 								<li><a href="home.html">HomePage</a></li>
 								<li><a href="AboutUs.html">About Us</a></li>
-								<li><a href="">Special Offer</a></li>
+								<li><a href="special.html">Special Offer</a></li>
 								<li><a href="newarrival.html">New Arrival</a></li>
 								<li><a href="product.html">Products</a></li>
 								<li><a href="Contact.html">Contact Us</a></li>
@@ -43,7 +42,7 @@
 			</div>
 			<div class="main">
 				<div class="wrapper">
-					<div class="col-lg-12" style="margin-top: 150px">
+					<div class="col-lg-12" style="margin-top: 120px">
 						<section id="contact" class="map">
 							<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.213639752193!2d106.67886077444321!3d10.794942958853085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528d40fe4899f%3A0xdd5f1c35ee2e6662!2zMzVBIEh14buzbmggVsSDbiBCw6FuaCwgUGjGsOG7nW5nIDE3LCBQaMO6IE5odeG6rW4sIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1688089508500!5m2!1svi!2s"></iframe>
 							<br/>
