--- a/special.html
+++ b/special.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Crystal Shop</title>
-	<link rel="stylesheet" type="text/css" href="Special.css">
+	<link rel="stylesheet" type="text/css" href="special.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
