--- a/AboutUs.html
+++ b/AboutUs.html
@@ -47,7 +47,7 @@
 					<div class="row">
 						<div class="container anh">
 							<img src="IMG/beautiful-colorful-crystal-banner-ruby-260nw-1609696621.jpg" alt="Nature" style="width:100%;">
-							<h1>Crystal Shop</h1>
+							<h1 style="font-family: 'Courier New', Courier, monospace; font-size: 55px;">Crystal Shop</h1>
 							<div class="div-content">
 								<h3>1. What is feng shui stone?</h3>
 								<h3>1.1 Define</h3>
