--- a/newarrival.html
+++ b/newarrival.html
@@ -47,7 +47,7 @@
 					<div class="row">
 						<div class="container anh">
 							<img src="IMG/beautiful-colorful-crystal-banner-ruby-260nw-1609696621.jpg" alt="Nature" style="width:100%;">
-							<h2>Products are being imported by the shop, and will be available in the next week</h2>
+							<h2> <i style="font-size: 25px;">Products are being imported by the shop, and will be available in the next week ✅</i></h2>
 							<div class="div-content">
 								<hr class="hr1">
 								<b style="font-size: 25px; margin-left: 37%;">Indian Marble Buddha</b> <br> <br>
