--- a/product.html
+++ b/product.html
@@ -29,8 +29,6 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
 			<div class="header">
 				<div class="footer-header">
 					<div class="logo">
@@ -55,9 +53,11 @@
 
 					<div class="row">
 						<div class="div-content">
+
+
 							<div class="col-md-12 col-sm-12">
 								<div class="row">
-									<div class="col-md-4 col-sm-4 col-xs-12" >
+									<div class="col-md-4 col-sm-4 col-xs-12">
 										<div class="panel panel-success">
 											<div class="panel-heading">List of crystals</div>
 											<div class="panel-body">
@@ -90,7 +90,7 @@
 													alt="">
 												<div class="text">
 													<strong>Natural Amber Bracelet - 1710143</strong>
-													<p>10.990.000 VND</p>
+													<p>515$</p>
 
 												</div>
 
@@ -101,7 +101,7 @@
 													alt="">
 												<div class="text">
 													<strong>Natural Red Ruby Necklace - 1702898</strong>
-													<p>19.260.000 VND</p>
+													<p>839$</p>
 
 												</div>
 											</a>
@@ -111,7 +111,7 @@
 												<div class="text">
 													<strong>High Quality Natural Jade Bracelet - 2200004</strong>
 
-													<p>4.390.000 VND</p>
+													<p>195$</p>
 
 												</div>
 											</a>
@@ -120,7 +120,7 @@
 													alt="">
 												<div class="text">
 													<strong>Natural Amethyst Stone - 1701334</strong>
-													<p>1.550.000 VND</p>
+													<p>75$</p>
 
 												</div>
 											</a>
@@ -130,7 +130,7 @@
 												<div class="text">
 													<strong>High Quality Natural Red Ruby Bracelet - 1901507</strong>
 
-													<p>11.050.000 VND</p>
+													<p>495$</p>
 
 												</div>
 											</a>
@@ -145,7 +145,7 @@
 												<div class="text">
 													<strong>Natural Children's Amber Necklace - 2200077
 													</strong>
-													<p>980.000 VND</p>
+													<p>39$</p>
 
 												</div>
 
@@ -156,7 +156,7 @@
 													alt="">
 												<div class="text">
 													<strong>Jewelry Drawstring Bag</strong>
-													<p>59.000 VND</p>
+													<p>5$</p>
 
 												</div>
 											</a>
@@ -167,7 +167,7 @@
 													<strong>Gray jewelry box set</strong>
 
 
-													<p>280.000 VND</p>
+													<p>15$</p>
 
 												</div>
 											</a>
@@ -176,7 +176,7 @@
 													alt="">
 												<div class="text">
 													<strong>Pink Jewelry Box Set</strong>
-													<p>290.000 VND</p>
+													<p>15$</p>
 
 												</div>
 											</a>
@@ -185,7 +185,7 @@
 													alt="">
 												<div class="text">
 													<strong>Jewelry Cabinet</strong>
-													<p>590.000 VND</p>
+													<p>29$</p>
 
 												</div>
 											</a>
@@ -194,7 +194,7 @@
 													alt="">
 												<div class="text">
 													<strong>Set Of Red Jewelry Bag Box</strong>
-													<p>390.000 VND</p>
+													<p>19$</p>
 
 												</div>
 											</a>
@@ -262,7 +262,7 @@
 															<img src="https://phongthuyvadoisong.com/pic/products/da-thach-_637002782115381787.jpg.ashx"
 																alt="Lights" style="width:100%">
 															<div class="caption">
-																<strong>High Quality Natural Amethyst Crushed Stone - 250k/Kg
+																<strong>High Quality Natural Amethyst Crushed Stone - 10$/Kg
 																</strong>
 																<br>
 																<i class="fa fa-star-o"></i>
@@ -272,7 +272,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	250.000 VND
+																	10$
 																</span>
 																<br>
 																<button class="as"><i
@@ -291,7 +291,7 @@
 															<img src="https://phongthuyvadoisong.com/pic/products/da-thach-_637002782235697284.jpg.ashx"
 																alt="Nature" style="width:95%">
 															<div class="caption">
-																<strong>High Quality Natural Rose Quartz Crushed Stones - 200k/Kg
+																<strong>High Quality Natural Rose Quartz Crushed Stones - 10$/Kg
 																</strong>
 																<br>
 																<i class="fa fa-star-o"></i>
@@ -301,7 +301,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	200.000 VND
+																	10$
 																</span>
 																<br>
 																<button class="as"><i
@@ -319,7 +319,7 @@
 															<img src="https://phongthuyvadoisong.com/pic/products/thanh-anh_637002789466035243.jpg.ashx"
 																alt="Fjords" style="width:100%">
 															<div class="caption">
-																<strong>High Quality Natural Green Quartz Crushed Stone - 200k/Kg
+																<strong>High Quality Natural Green Quartz Crushed Stone - 10$/Kg
 																</strong>
 																<br>
 																<i class="fa fa-star-o"></i>
@@ -329,7 +329,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	200.000 VND
+																	10$
 																</span>
 																<br>
 																<button class="as"><i
@@ -357,7 +357,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	4.800.000 VND
+																	250$
 																</span>
 																<br>
 																<button class="as"><i
@@ -385,7 +385,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	12.800.000 VND
+																	600$
 																</span>
 																<br>
 																<button class="as"><i
@@ -413,7 +413,7 @@
 																<i class="fa fa-star-o"></i>
 																<br>
 																<span>
-																	1.280.000 VND
+																	60$
 																</span>
 
 																<br>
@@ -477,7 +477,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		4.380.000 VND
+																		199$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -506,7 +506,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		30.900.000 VND
+																		1499$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -535,7 +535,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		10.990.000 VND
+																		499$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -564,7 +564,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		980.000 VND
+																		49$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -596,7 +596,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		13.900.000 VND
+																		699$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -626,7 +626,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		12.800.000 VND
+																		599$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -655,7 +655,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		4.555.000 VND
+																		249$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -684,7 +684,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.550.000 VND
+																		69$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -719,7 +719,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		3.040.000 VND
+																		150$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -748,7 +748,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.875.000 VND
+																		79$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -777,7 +777,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		3.045.000 VND
+																		150$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -807,7 +807,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		2.045.000 VND
+																		89$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -839,7 +839,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		3.310.000 VND
+																		159$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -869,7 +869,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.275.000 VND
+																		59$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -899,7 +899,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		2.360.000 VND
+																		99$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -929,7 +929,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.280.000 VND
+																		59$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -955,7 +955,7 @@
 																<img src="https://phongthuyvadoisong.com/pic/products/da-thach-_637002782115381787.jpg.ashx"
 																	alt="Lights" style="width:92%">
 																<div class="caption">
-																	<strong>High Quality Natural Amethyst Crushed Stone - 250k/Kg</strong>
+																	<strong>High Quality Natural Amethyst Crushed Stone - 10$/Kg</strong>
 																	<br>
 																	<i class="fa fa-star-o"></i>
 																	<i class="fa fa-star-o"></i>
@@ -964,7 +964,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		250.000 VND
+																		10$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -993,7 +993,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.280.000 VND
+																		59$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1022,7 +1022,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		680.000 VND
+																		39$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1053,7 +1053,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		7.045.000 VND
+																		350$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1086,7 +1086,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		11.375.000 VND
+																		599$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1117,7 +1117,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		12.600.000 VND
+																		599$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1147,7 +1147,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		11.375.000 VND
+																		549$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1177,7 +1177,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		19.600.000 VND
+																		899$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1214,7 +1214,7 @@
 																<img src="https://phongthuyvadoisong.com/pic/products/da-thach-_637002782235697284.jpg.ashx"
 																	alt="Lights" style="width:100%">
 																<div class="caption">
-																	<strong>High Quality Natural Rose Quartz Crushed Stone - 200k/Kg
+																	<strong>High Quality Natural Rose Quartz Crushed Stone - 10$/Kg
 																	</strong>
 																	<br>
 																	<i class="fa fa-star-o"></i>
@@ -1224,7 +1224,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		200.000 VND
+																		10$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1254,7 +1254,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		600.000 VND
+																		29$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1283,7 +1283,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		7.260.000 VND
+																		359$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1312,7 +1312,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		2.840.000 VND
+																		139$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1347,7 +1347,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		3.290.000 VND
+																		160$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1377,7 +1377,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		4.390.000 VND
+																		189$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1406,7 +1406,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		10.800.000 VND
+																		489$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1435,7 +1435,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		4.390.000 VND
+																		190$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1472,7 +1472,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		19.260.000 VND
+																		900$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1502,7 +1502,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		11.050.000 VND
+																		500$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1531,7 +1531,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		1.200.000 VND
+																		49$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1560,7 +1560,7 @@
 																	<i class="fa fa-star-o"></i>
 																	<br>
 																	<span>
-																		28.560.000 VND
+																		1599$
 																	</span>
 																	<br>
 																	<button class="as"><i
@@ -1701,7 +1701,7 @@
 				}
 				document.getElementById("defaultOpen1").click();
 
-			</script>
+			</script>.0
 </body>
 
 </html>
