--- a/special.html
+++ b/special.html
@@ -59,7 +59,7 @@
 										<img src="https://phongthuyvadoisong.com/pic/products/vong-lapi_637145109027176712.jpg.ashx" alt="Avatar" style="width:100%;">
 										<div class="" style="background-color:white">
 										  <h2><b>20% OFF YOUR PURCHASE</b></h2>
-										  <p> 1.100.000 VND</p>
+										  <p> 1000$</p>
 										</div>
 										<div class="">
 										  <p>Use Promo Code: <span class="promo">BOH232</span></p>
@@ -80,5 +80,61 @@
 			</div>
 		</div>
 	</div>
+	
 </body>
+<footer>
+	<div class="div-footer">
+		<div class="wrapper">
+			<div class="row">
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
+
+					<div class="thumbnail1">
+
+							<div class="caption olala" style="color: gray;">
+								<h3 style="color: white;">About us</h3>
+								<p>Feng shui stone is the type that is formed and created from the ground after thousands of years of collecting and recovering the energies of heaven and earth. As a result, the stones possess powerful energies, positively affecting the owner. Thanks to those positive effects and meanings, this stone is chosen by many people both as a jewelry item and bring benefits to the body.</p>
+
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
+
+					<div class="thumbnail1" style="color: gray;">
+							<div class="caption olala ">
+								<h3 style="color: white;">Contacts</h3>
+								<p>Showroom: 35A Huỳnh Văn Bánh - Phường 17 - Quận Phú Nhuận - TP.HCM</p>
+								<p>Email:
+									phongthuyvadoisong@gmail.com</p>
+								<p>Phone: 028.66.535.888/0914.666.284 - Mrs.Trang </p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xs-12">
+
+					<div class="thumbnail1" style="color: gray;">
+							<div >
+								<h3 style="color: white;">Guarantee policy</h3>
+								<p>You receive the product but are not satisfied - Not satisfied with the product and service quality. </p>
+								<p>Call now 0914.666.284</p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-md-3 col-lg-3 col-xs-12" style="color: gray;">
+
+					<div class="caption olala">
+						<h3 style="color: white;">Authentic photo</h3>
+						<img src="https://phongthuyvadoisong.com/pic/news/images/10092013/dmca_protected_1_120.png" alt="">
+						<img src="https://phongthuyvadoisong.com/pic/news/images/10092013/da-thong-bao(1)(1).png" alt="">
+					</div>
+				</div>
+
+			</div>
+					
+		</div>
+
+	</div>
+</footer>
 </html>
