--- a/Contact.html
+++ b/Contact.html
@@ -95,6 +95,16 @@
 			</div>
 		</div>
 	</div>
+	
+	<hr>
+	<div style="padding-left: 10%;">
+		<img src="IMG/hinh2.jpg"  style="width: 400px;" >
+		<img src="IMG/hinh1.jpg"  style="width: 400px;" >
+		<img src="IMG/hinh3.jpg"  style="width: 350px;">
+		<h2 style="text-align: center;"> <b style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 35px;">Project members</b></h2>
+	</div>
+	<hr>
+	
 	<script type="text/javascript">
 		var onMapMouseleaveHandler = function(event) {
   var that = $(this);
